# Copyright (c) 2004-2005, BULL S.A. All rights reserved.
# Authors: 2004, Laurent Vivier <Laurent.Vivier@bull.net>
#          2005, Sebastien Dugue <Sebastien.Dugue@bull.net>
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# See the COPYING.LESSER file at the top level of this source tree.

include_HEADERS = aio.h

clean-local:
	rm -f *~
